# auxfuncs

./: README.md  setup.cfg
src/auxfuncs/: auxfuncs.py
