[metadata]
name = auxfuncs
author = Oliver Mohr B.
author_email = oliver.mohr.b@gmail.com
version = 0.1.2
description = Personal library for handling functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliverm91/auxguncs
license_files = LICENSE
keywords = function handling
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Natural Language :: English

[options]
package_dir=
    = src
packages=find:
python_requires = >=3.6
install_requires = 
    multimethod

[options.packages.find]
where=src